.provarCaches/00D6C0000000xA6UAI/objects/redwing__Training_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skedulo_Job_Id_External__c</fullName>
        <externalId>true</externalId>
        <label>Skedulo Job Id External</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>redwing__Achievement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Achievement</label>
        <referenceTo>redwing__Achievement__c</referenceTo>
        <relationshipLabel>Learning Activities</relationshipLabel>
        <relationshipName>Training_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Chatter_Notifications_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Disable this option if you don&apos;t want users to receive chatter notifications.</inlineHelpText>
        <label>Chatter Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Custom_Notification_Message__c</fullName>
        <inlineHelpText>Custom message used for chatter notifications</inlineHelpText>
        <label>Custom Notification Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Duration__c</fullName>
        <formula>redwing__Learning__r.redwing__Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Duration_hours__c</fullName>
        <formula>redwing__Learning__r.redwing__Duration_hours__c</formula>
        <label>Duration (hours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_all_external_accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox will expose this Learning Activity to all external (Community/Portal) users</inlineHelpText>
        <label>Enable for all external users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_all_internal_users__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox will expose this Learning Activity to all internal users</inlineHelpText>
        <label>Enable for all internal users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Description__c</fullName>
        <label>Learning Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Name__c</fullName>
        <externalId>true</externalId>
        <label>Learning Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Only published learning objects can be used as Learning Activities</errorMessage>
            <filterItems>
                <field>redwing__Learning__c.redwing__Is_Published_Formula__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>NOTE: Only published learning objects can be used as Learning Activities</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Activities</relationshipLabel>
        <relationshipName>Training_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Activity</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Learning__c</columns>
        <columns>redwing__Achievement__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LA-{0000000}</displayFormat>
        <label>Learning Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>redwing__LMS_Sharing__c</fullName>
        <label>LMS Sharing</label>
    </sharingReasons>
</CustomObject>